--- a/src/styles/RenderRocket.scss
+++ b/src/styles/RenderRocket.scss
@@ -30,12 +30,13 @@
       border: 1px solid #fff;
       color: #efefef;
     }
+
     button:hover {
       cursor: pointer;
       color: #fff;
-      box-shadow: -1px -1px 12px 2px rgba(53,162,250,0.59);
-      -webkit-box-shadow: -1px -1px 12px 2px rgba(53,162,250,0.59);
-      -moz-box-shadow: -1px -1px 12px 2px rgba(53,162,250,0.59);
+      box-shadow: -1px -1px 12px 2px rgba(53, 162, 250, 0.59);
+      -webkit-box-shadow: -1px -1px 12px 2px rgba(53, 162, 250, 0.59);
+      -moz-box-shadow: -1px -1px 12px 2px rgba(53, 162, 250, 0.59);
     }
   }
 }
