--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
 html {
   font-size: 10px;
+  font-family: 'Lato', sans-serif;
 }
 
 * {
@@ -9,4 +12,8 @@ html {
 
 h2 {
   font-size: 4rem;
+}
+
+button:hover {
+  cursor: pointer;
 }
