--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -13,7 +13,8 @@
     justify-content: space-between;
     width: 90%;
     margin: auto;
-    padding: 10px 0;
+    padding: 10px 0 20px 0;
+    border-bottom: 2px solid #efefef;
   }
 
   &-child {
