Change member badge based on reserve state

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,4 @@
 $blue-color: rgb(53, 162, 250);
 $gray-color: rgb(196, 196, 196);
 $gray-light: rgb(240, 240, 240);
+$blue-green: rgb(26, 178, 197);
