Render leave button when reserved state changes

--- a/src/styles/missionsPage.scss
+++ b/src/styles/missionsPage.scss
@@ -58,6 +58,11 @@ th {
     padding: 7px 10px;
     border-radius: 5px;
   }
+
+  .leaving {
+    border-color: $red-dark;
+    color: $red-dark;
+  }
 }
 
 tbody {
