Make header stick to the top

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,3 +17,13 @@ h2 {
 button:hover {
   cursor: pointer;
 }
+
+header {
+  position: fixed;
+  width: 100%;
+  background-color: white;
+}
+
+main {
+  padding-top: 100px;
+}
