--- a/src/styles/myProfilePage.scss
+++ b/src/styles/myProfilePage.scss
@@ -13,12 +13,16 @@
   margin-top: 20px;
   width: 100%;
   border: 1px solid $gray-color;
-  
+  border-radius: 10px;
+
   .mission {
     font-size: 2rem;
     padding: 20px 30px 60px 30px;
     width: 100%;
     border-bottom: 1px solid $gray-color;
+  }
 
+  :last-child {
+    border: none;
   }
 }
