--- a/src/styles/profileRockets.scss
+++ b/src/styles/profileRockets.scss
@@ -1,32 +1,24 @@
+@import 'variables';
+
 .rockets_container {
   width: 40%;
-  margin: auto;
-
-  h2 {
-    font-weight: bold;
-  }
 
   ul {
-    border: 1px solid #000;
-    border-radius: 3px;
-    width: 80%;
-    margin: 15px 0;
+    border: 1px solid $gray-color;
+    border-radius: 10px;
+    width: 100%;
+    margin: 20px 0;
 
     li {
-      font-size: 30px;
-      font-weight: lighter;
-      margin: 10px 0;
-      padding: 10px 10px;
+      font-size: 2.5rem;
+      font-weight: 400;
+      padding: 20px 10px 40px 10px;
       border-bottom: 1px solid rgba(0, 0, 0, 0.384);
     }
 
     :last-child {
       border-bottom: none;
-      padding-bottom: 10px;
     }
 
-    :first-child {
-      padding-top: 10px;
-    }
   }
 }
